# atlas

./: .gitignore  .gitleaks.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
atlas-core/: Dockerfile  README.md  pom.xml
atlas-core/src/main/java/com/atlas/core/: AtlasCoreApplication.java
atlas-core/src/main/java/com/atlas/core/document/: ApiError.java  ChunkRepository.java  Document.java  DocumentController.java  DocumentExceptionHandler.java  DocumentNotFoundException.java  DocumentRepository.java  DocumentStatus.java  DocumentStatusResponse.java  (+14 more)
atlas-core/src/main/resources/: application.yml  logback-spring.xml
atlas-core/src/main/resources/db/migration/: V2__document_and_chunk_schema.sql  V3__chunk_page_provenance.sql  V4__document_error_and_chunk_token_count.sql
atlas-core/src/test/java/com/atlas/core/: AtlasCoreApplicationTests.java
atlas-evals/: README.md  pyproject.toml  requirements.txt
atlas-evals/datasets/: README.md
atlas-evals/evals/: run.py
atlas-evals/tests/: test_run.py
atlas-fde/: README.md
atlas-fde/playbooks/: customer-onboarding.md
atlas-fde/templates/: deployment-checklist.md
corpus/: README.md  download.sh  ingest.sh  manifest.json
docker/: .env.example  README.md  docker-compose.yml
docs/: README.md  plan.md
docs/adr/: 0000-template.md  0001-java-21.md  0002-spring-boot-and-spring-ai.md  0003-postgresql-pgvector.md  0004-python-eval-harness.md  0005-docker-compose-first.md  0006-v1-exclusions.md  0007-monorepo-http-boundaries.md  README.md
docs/architecture/: overview.md
(+37 files in other folders)
