[project]
name = "atlas-evals"
version = "0.1.0"
description = "Python harness for evaluating atlas-core's retrieval and generation quality."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

# TODO(v1): add RAG-quality libs as eval metrics are implemented
# e.g. ragas, ranx, ollama/openai/anthropic client for judge models

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
